namespace WebApi.DTOs;

public class AuthorDto
{
    public int Id { get; set; }
    public string Name { get; set; }
    public DateTime Created { get; set; }
}