namespace WebApi.DTOs;

public class BookInfoDto
{
    public int Id { get; set; }
        
    public string Name { get; set; }
        
    public int AuthorId { get; set; }
        
    public DateTime Created { get; set; }
}